fix: avoid pages redeploy loop from generated site commits

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -3,6 +3,9 @@ name: Deploy static site to GitHub Pages
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - 'research/**'
+      - 'interview/**'
   workflow_dispatch:
 
 permissions:
