--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
@@ -71,14 +71,6 @@ jobs:
           rm -rf interview
           mkdir -p interview
           cp -r external/InterviewGuide/dist/* interview/
-
-      - name: Commit generated sub-sites if changed
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add research/ interview/
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update external sites"
-          git push || echo "No changes to push"
 
       - uses: actions/upload-pages-artifact@v3
         with:
